Use github.io URL instead of custom domain

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://www.boxiangliu.com/gdsc-academy/'
+baseURL = 'https://boxiangliu.github.io/gdsc-academy/'
 languageCode = 'en-us'
 title = 'Genomics Data Science Academy'
 theme = 'simple'
